<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/search_filter"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/sort"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_order"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/type"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_image_type"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/category"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_image_category"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <Button
        android:id="@+id/button_show_result"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:elevation="2dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2196F3"
        android:textColor="#FFFFFF"
        android:text="@string/show_result" />

</LinearLayout>
